@@ -7,6 +7,8 @@ Changelog
 
 - Bugfix: Could not get portrait data for users with custom profile pictures.
   [jcbrand]
+- Feature: Add a new controlpanel option to update all user's vCards.
+  [jcbrand]
 
 
 0.2 (2013-03-20)
